--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "framer-motion": "^8.0.2",
     "gatsby": "^5.3.3",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-icons": "^4.7.1"
   },
   "repository": {
     "type": "git",
