--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "framer-motion": "^8.0.2",
     "gatsby": "^5.3.3",
     "gatsby-cli": "^5.3.1",
+    "gatsby-plugin-manifest": "^5.3.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.7.1"
