--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "framer-motion": "^8.0.2",
     "gatsby": "^5.3.3",
     "gatsby-cli": "^5.3.1",
+    "gatsby-plugin-google-gtag": "^5.13.1",
     "gatsby-plugin-manifest": "^5.4.0",
     "gatsby-plugin-react-helmet": "^6.4.0",
     "react": "^18.2.0",
