--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@chakra-ui/react": "^2.4.4",
     "@emotion/react": "^11.10.5",
     "@emotion/styled": "^11.10.5",
+    "dotenv": "^16.4.5",
     "framer-motion": "^8.0.2",
     "gatsby": "^5.3.3",
     "gatsby-cli": "^5.3.1",
